<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_margin="24dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:hint="@string/masukan_1"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:hint="@string/masukan_2" />

    <Button
        android:id="@+id/tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/editText2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/kurang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kurang"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/tambah"
        android:layout_below="@id/editText2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/kali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kali"
        android:layout_marginTop="12dp"
        android:layout_below="@id/editText2"
        android:layout_toRightOf="@id/kurang"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bagi"
        android:layout_marginTop="12dp"
        android:layout_below="@id/editText2"
        android:layout_toRightOf="@id/kali"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/tambah"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_operasi"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/kurang"
        android:layout_toRightOf="@id/result"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>